infra/metallb/networkpolicies/egress-metallb.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-metallb
  namespace: metallb
spec:
  selector: app.kubernetes.io/instance == 'metallb'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
