infra/metallb/networkpolicies/metallb.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metallb
  namespace: metallb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: metallb
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube api
