infra/metallb/networkpolicies/prometheus-egress-metallb.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-metallb
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: metallb
            app.kubernetes.io/instance: metallb
            app.kubernetes.io/component: controller
            io.kubernetes.pod.namespace: metallb
        - matchLabels:
            app.kubernetes.io/name: metallb
            app.kubernetes.io/instance: metallb
            app.kubernetes.io/component: speaker
            io.kubernetes.pod.namespace: metallb
      toPorts:
        - ports:
            - port: "7472"
              protocol: TCP
